chore: atualizar CLAUDE.md + adicionar comandos git e utilitário de hash
- Reescrita do CLAUDE.md com documentação atualizada do projeto
- Adicionados comandos customizados .claude/commands/ (git init, commit, push)
- Adicionado utilitário GerarHash.java para gerar hashes BCrypt de teste

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>